--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-	"name": "hainan-life-mobile",
-	"version": "1.0.0",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"autoprefixer": "6.3.6",
-		"browser-sync": "2.12.10",
-		"css-mqpacker": "^5.0.1",
-		"del": "^2.2.1",
-		"editorconfig-tools": "0.1.1",
-		"gulp": "^3.9.1",
-		"gulp-csso": "^2.0.0",
-		"gulp-imagemin": "^3.0.1",
-		"gulp-less": "^3.3.0",
-		"gulp-plumber": "1.1.0",
-		"gulp-postcss": "6.1.1",
-		"gulp-pug": "^3.1.0",
-		"gulp-rename": "^1.2.2",
-		"gulp-stylus": "^2.5.0",
-		"gulp-svgmin": "^1.2.2",
-		"gulp-svgstore": "^6.0.0",
-		"run-sequence": "^1.2.1"
-	},
-	"description": "pug & less"
+  "name": "hainan-life-mobile",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "6.3.6",
+    "browser-sync": "2.12.10",
+    "css-mqpacker": "^5.0.1",
+    "del": "^2.2.1",
+    "editorconfig-tools": "0.1.1",
+    "gulp": "^3.9.1",
+    "gulp-csso": "^2.0.0",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-less": "^3.3.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-plumber": "1.1.0",
+    "gulp-postcss": "6.1.1",
+    "gulp-pug": "^3.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-stylus": "^2.5.0",
+    "gulp-svgmin": "^1.2.2",
+    "gulp-svgstore": "^6.0.0",
+    "run-sequence": "^1.2.1"
+  },
+  "description": "pug & less"
 }
